--- a/src/components1/Row/Row/row.css
+++ b/src/components1/Row/Row/row.css
@@ -1,21 +1,24 @@
 .row__poster {
 	width: 100%;
 	object-fit: contain;
-	max-height: 100px;
+	max-height: 250px;
 	transition: transform 450ms;
 	margin-right: 10px;
+	/* transform: scale(1.09); */
+	/* position: relative;
+	text-align: center; */
 }
 .row__posters {
 	display: flex;
 	overflow-y: hidden;
-	overflow-x: scroll;
+	overflow-x: auto;
 	padding: 20px;
 }
 .row__posters::-webkit-scrollbar {
 	display: none;
 }
 .row__poster:hover {
-	transform: scale(1.08);
+	transform: scale(1.09);
 }
 .row__posterLarge{
     max-height: 250px;
@@ -28,3 +31,16 @@
 	color: white;
 	margin-top: 2rem;
 }
+/* .movie__name{
+	font-size: small;
+	overflow-y: hidden;
+	overflow-x: scroll;
+	display: flex;
+	padding: 20px;
+} */
+/* .overlay-text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+} */
